Completed implementation of [WSTX-50]